--- a/addDiscount.html
+++ b/addDiscount.html
@@ -57,6 +57,60 @@
             border: none;
             cursor: pointer;
         }
+        .pictureInput {
+            top: -1px;
+            font-size: 12px;
+            padding-left: 3px;
+            padding-right: 3px;
+            padding-bottom: 2px;
+            color: #7B8084 !important;
+            background: #F2F2F2 !important;
+            background-size: 50px 30px;
+        }
+        input[type=text] {
+            padding: 12px 20px;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input {
+            font-size: 18px;
+            padding: 10px 10px 10px 5px;
+            display: block;
+            width: 300px;
+            border: 1px solid #212121;
+            background: transparent !important;
+            color: #212121;
+            /*border-radius: 10px;*/
+        }
+
+        label {
+            color: #7B8084 !important;
+            font-weight: normal !important;
+            position: absolute;
+            pointer-events: none;
+            right: 45px;
+            top: 20px;
+        }
+
+        input:focus ~ label,
+        input:valid ~ label {
+            top: -1px;
+            font-size: 12px;
+            padding-left: 3px;
+            padding-right: 3px;
+            padding-bottom: 3px;
+            color: #7B8084 !important;
+            background: #F2F2F2 !important;
+            background-size: 50px 30px;
+        }
+
+        input:focus,
+        input:valid {
+            border-color: #006DA0 !important;
+        }
     </style>
     <nav class="w3-sidenav w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
         <div class="w3-margin ">
@@ -108,86 +162,93 @@
                       <form class="form-horizontal" id="addDiscount-form">
 
                           <div class="form-group">
-                              <div class="col-md-10">
-                                  نام محصول * : <input type="text" required name="productName" value=""
-                                                       class="form-control w3-margin"
-                                                       id="addDiscount-form-product-name-inp" accept="application/txt" />
+                              <div class="col-md-11">
+                                  <input type="text" required name="productName" value=""
+                                         class="form-control w3-margin"
+                                         id="addDiscount-form-product-name-inp" accept="application/txt" />
+                                  <label> نام محصول * </label>
                               </div>
                           </div>
 
                           <div class="form-group">
-                              <div class="col-md-10">
-                                  تصویر بارکد * :  <input type="file" required name="productBarcodeImage" value=""
-                                                          class="form-control w3-margin"
-                                                          id="addDiscount-form-product-barcode-image-file" accept="image/*" />
+                              <div class="col-md-11">
+                                  <input type="file" required name="productBarcodeImage" value=""
+                                         class="form-control w3-margin pictureInput" 
+                                         id="addDiscount-form-product-barcode-image-file" accept="image/*" />
+                                  <label> تصویر بارکد * </label>
                               </div>
                           </div>
 
                           <div class="form-group">
-                              <div class="col-md-10">
-                                  شناسه محصول * :  <input type="text" required name="productCode" value=""
+                              <div class="col-md-11">
+                                   <input type="text" required name="productCode" value=""
                                                           class="form-control w3-margin"
                                                           id="addDiscount-form-product-code-inp" accept="application/txt" />
+                                     <label> شناسه محصول * </label>
                               </div>
                           </div>
                           <div class="form-group">
-                              <div class="col-md-10">
-                                  برند محصول * : <input type="text" required name="productBrand" value=""
-                                                        class="form-control w3-margin"
+                              <div class="col-md-11">
+                                  <input type="text" required name="productBrand" value=""
+                                                        class="form-control w3-margin pictureInput"
                                                         id="addDiscount-form-product-brand-inp" accept="application/txt" />
+                                  <label> برند محصول * </label>
                               </div>
                           </div>
-
                           <div class="form-group">
-                              <div class="col-md-10" >
-                                  درصد تخفیف :  <input type="range" required name="percent" min="0" max="100" step="5" value="10"
+                              <div class="col-md-11" >
+                                  <input type="range" required name="percent" min="0" max="100" step="5" value="10"
                                                        class="form-control w3-margin"
                                                        id="addDiscount-form-percent-inp" accept="application/txt"/>
+                                  <label> درصد تخفیف   </label>
                               </div>
                           </div>
 
                           <div class="form-group">
-                              <div class="col-md-10">
-                                  کد تخفیف :  <input type="text" name="percentCode" value=""
+                              <div class="col-md-11">
+                                    <input type="text" required name="percentCode" value=""
                                                      class="form-control w3-margin"
                                                      id="addDiscount-form-percent-code-inp" accept="application/txt" />
+                                  <label> کد تخفیف </label>
                               </div>
                           </div>
 
                           <div class="form-group">
-                              <div class="col-md-10">
+                              <div class="col-md-11">
 <!--                                  تعویض تاریخ-->
-                                  مهلت :  <input type="date" value="" name="timeout"
-                                                 class="form-control w3-margin"
+                                  <input type="date" required autofocus value="" name="timeout"
+                                                 class="form-control w3-margin pictureInput"
                                                  id="addDiscount-form-timeout-inp" accept="application/txt">
+                                  <label> مهلت </label>
                               </div>
                           </div>
-
                           <div class="form-group">
-                              <div class="col-md-10">
-                                  توضیحات :  <input type="text" name="description" value=""
+                              <div class="col-md-11">
+                                  <input type="text" required name="description" value=""
                                                     class="form-control w3-margin"
                                                     id="addDiscount-form-description-inp" accept="application/txt" />
+                                  <label> توضیحات </label>
                               </div>
                           </div>
 
                           <div class="form-group">
-                              <div class="col-md-10">
-                                  تصویر محصول <input type="file" name="ImageSrc" value="productImage"
-                                                     class="form-control w3-margin"
+                              <div class="col-md-11">
+                                   <input type="file" required name="ImageSrc" value="productImage"
+                                                     class="form-control w3-margin pictureInput"
                                                      id="addDiscount-form-product-image-inp" accept="image/*" />
+                                   <label> تصویر محصول </label>
                               </div>
                           </div>
 
                           <div class="form-group">
-                              <div class="col-md-offset-5 col-md-10">
+                              <div class="col-md-offset-5 col-md-11">
                                   <input type="submit" value="ذخیره" id="addDiscount-form-submit-btn" class="btn btn-default btnColors" />
                               </div>
                           </div>
 
                           <br />
                           <div class="form-group">
-                              <div class="col-md-10">
+                              <div class="col-md-11">
                                   * : وارد کردن تنها یکی از این موارد کافی می باشد.
                               </div>
                           </div>
